<resources>
    <string name="app_name">Chainway Tools</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_ip_or_domain">Input Domain/IP</string>
    <string name="title_ping_count">PING Count</string>
    <string name="title_ping_background">Background</string>
    <string name="title_ping_wait">Timeout</string>
    <string name="title_start">Start</string>
    <string name="title_stop">Stop</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_set">Settings</string>
    <string name="msg_network_none">Network unavailable</string>
    <string name="msg_network_unavailable">Network unavailable</string>
    <string name="msg_domain_ip_bad">Domain/IP Error</string>
    <string name="msg_loding">loading...</string>
    <string name="msg_no_data">NO DATA</string>
    <string name="app_title">Chainway Tools %s</string>
    <string name="upload_title">Upload Tool %s</string>
    <string name="download_title">Download Tool %s</string>
    <string name="action_back">Back</string>
    <string name="ok">OK</string>
    <string name="exit">Exit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="close">Close</string>
    <string name="up_one_level">..(up)</string>
    <string name="current_dir">.(refresh)</string>
    <string name="strFilePath">File Path</string>
    <string name="strBrowser">Browse</string>
    <string name="strPermissionDeny">No permission</string>
    <string name="title_activity_download">Download Tool</string>
    <string name="title_activity_upload">Upload Tool</string>
    <string name="title_Ping">Ping Tool</string>
    <string name="title_Download">Download Tool</string>
    <string name="title_Upload">Upload Tool</string>
    <string name="strUpload">Upload</string>
    <string name="title_activity_ping">PingActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_ping_packet_size">Packet Size</string>
    <string name="ping_title">Ping Tool %s</string>
    <string name="yid_title">1D Barcode Tool</string>
    <string name="title_activity_yi_d">Barcode_1D Tool</string>
    <string name="title_scan">Scan</string>
    <string name="title_clear">Clear</string>
    <string name="title_init_barcode">init Barcode</string>
    <string name="title_scan_between">Interval</string>
    <string name="yid_title_scan_compare">Compare</string>
    <string name="yid_title_scan_continuous">Auto,interval</string>
    <string name="yid_msg_scan_fail">Scan fail</string>
    <string name="yid_msg_scan_error">Barcode error</string>
    <string name="title_scan_count">total</string>
    <string name="title_succ_count">success</string>
    <string name="title_fail_count">fail</string>
    <string name="title_error_count">error</string>
    <string name="title_error_rate">error %</string>
    <string name="title_succ_rate">success %</string>
    <string name="title_fail_rate">fail %</string>
    <string name="title_activity_bluetooth_print">Bluetooth Tool</string>
    <string name="send">Send</string>
    <string name="Print">Print</string>
    <string name="Clear">Clear</string>
    <string name="not_connected">Please connect the bluetooth printer</string>
    <string name="bt_not_enabled_leaving">Please select a device!!</string>
    <string name="title_connecting">Connecting...</string>
    <string name="title_connected_to">Connected: </string>
    <string name="title_not_connected">Not connected</string>
    <string name="default_font_gray_scale">4</string>
    <string name="fontGrayscaleName">Grayscale</string>
    <string name="fontGrayScaleRange">(1~8)</string>
    <string name="PrintContent"> HELLO WORLD! \n</string>
    <string name="scanning">Scanning...</string>
    <string name="select_device">Not connected</string>
    <string name="none_paired">No Matching</string>
    <string name="none_found">Not found</string>
    <string name="title_paired_devices">Matched</string>
    <string name="title_other_devices">Other Devices</string>
    <string name="button_scan">Scan</string>
    <string name="title_activity_uhfmain">UHF Tool</string>
    <string name="tvInventoryName">Inventory Tag</string>
    <string name="tvCountOfTags">Total&#160;&#160;</string>
    <string name="rbInventorySingle">Single</string>
    <string name="rbInventoryLoop">Auto</string>
    <string name="rbInventoryAnti">Anti</string>
    <string name="tvQ">Q value：</string>
    <string name="btInventory">Start</string>
    <string name="title_stop_Inventory">Stop</string>
    <string name="tvTagUii">EPC</string>
    <string name="tvTagLen">Length</string>
    <string name="tvTagCount">Count</string>
    <string name="btClear">Clear</string>
    <string-array name="arrayAntiQ">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <string-array name="arrayLF">
        <item>ID Card</item>
        <item>Animal Tag</item>
        <item>HiTag</item>
        <item>HDX Tag</item>
        <item>EM4450</item>
    </string-array>
    <string name="btUii">Read EPC</string>
    <string name="ckWithUii">Use EPC</string>
    <string name="tvTagUii_Read">EPC：</string>
    <string name="tvBank">Bank：</string>
    <string name="tvPtr">Ptr：</string>
    <string name="tvLen">Len：</string>
    <string name="tvAccessPwd">Access Pwd：</string>
    <string name="tvOption_Read">Read Mode：</string>
    <string name="ckLoop_Read">Auto</string>
    <string name="ckAnti_Read">Anti</string>
    <string name="ckSecond">2级参数设置</string>
    <string name="tvBank2_Read">Block：</string>
    <string name="tvPtr2_Read">Ptr：</string>
    <string name="tvLen2_Read">Len：</string>
    <string name="tvData_Read">Data：</string>
    <string name="btRead">Read</string>
    <string-array name="arrayBank">
        <item>RESERVED</item>
        <item>UII</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>
    <string-array name="arrayOption_Read">
        <item>Single</item>
        <item>Auto</item>
        <item>Anti(1 level)</item>
        <item>Anti(2 level)</item>
    </string-array>
    <string name="tvChooseInfo">请选择UII的去向</string>
    <string name="rbRead">Read Data</string>
    <string name="rbWrite">Write Data</string>
    <string name="rbErase">Erase Data</string>
    <string name="rbLock">Lock Data</string>
    <string name="btEnter">Confirm</string>
    <string name="btCancel">Cancel</string>
    <string name="tvGetUiiForOperation">Tags List</string>
    <string name="btReadUii">Read UII</string>
    <string name="btStop">Stop</string>
    <string name="btBack1">Back</string>
    <string name="tvTagUii_Data">EPC：</string>
    <string name="tvBank_Data">Block：</string>
    <string name="tvPtr_Data">Ptr：</string>
    <string name="tvLen_Data">Len：</string>
    <string name="tvCount_Data">Count：</string>
    <string name="tvData_Data">Data：</string>
    <string name="tvStatus_Data">Status：</string>
    <string name="tvTagUii_Write">EPC：</string>
    <string name="tvOption_Write">Write Mode：</string>
    <string name="tvData_Write">Write Data：</string>
    <string name="btWrite">Write Data</string>
    <string-array name="arrayOption_Write">
        <item>Singleword</item>
        <item>Multiword</item>
    </string-array>
    <string name="tvTagUii_Lock">EPC：</string>
    <string name="tvKill_Lock">Kill Pwd：</string>
    <string name="tvAccess_Lock">Access Pwd：</string>
    <string name="tvUII_Lock">UII：</string>
    <string name="tvTID_Lock">TID：</string>
    <string name="tvUSER_Lock">USER：</string>
    <string name="tvLockCode_Lock">Lock Code：</string>
    <string name="btCreateCode">Create Code</string>
    <string name="btLock">Lock</string>
    <string-array name="arrayLock">
        <item>Hold</item>
        <item>Lock</item>
        <item>Unlock</item>
        <item>Permanent Lock</item>
        <item>Permanent Unlock</item>
    </string-array>
    <string name="tvTagUii_Kill">EPC：</string>
    <string name="tvKillPwd">Kill Pwd：</string>
    <string name="btKill">Kill</string>
    <string name="tvBank_Select">Block：</string>
    <string name="tvPtr_Select">Ptr：</string>
    <string name="tvMask">Mask：</string>
    <string name="tvOrder">S/N：</string>
    <string name="num">Count：</string>
    <string name="btAdd_Select">Add</string>
    <string name="btDel_Select">Del</string>
    <string name="btChoose_Select">Select</string>
    <string name="btRead_Select">Read</string>
    <string-array name="arrayNum">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <string name="tvMode">Working Mode：</string>
    <string name="btSetFre">FrequencySet</string>
    <string name="tvFreRange">Frequency Range：</string>
    <string name="btGetFre">Read Frequency</string>
    <string name="tvStartFreI">The starting frequency integer：</string>
    <string name="tvFreI">840</string>
    <string name="btAddI">+</string>
    <string name="btReduceI">-</string>
    <string name="tvStartFreD">Starting frequency of the decimal：</string>
    <string name="tvFreD">50</string>
    <string name="btAddD">+</string>
    <string name="btReduceD">-</string>
    <string name="tvBase">band base number：</string>
    <string name="tvChannelCount">Channel：</string>
    <string name="HintChannelCount">Channel number not less than 1</string>
    <string name="tvChinnelSpace">Channel Bandwidth：</string>
    <string name="tvHop">Freq Jump：</string>
    <string name="btCalRange">Calculation</string>
    <string name="tvMHz">MHz</string>
    <string name="tvKHz">KHz</string>
    <string-array name="arrayMode">
        <item>China Standard(920~925MHz)</item>
        <item>China Standard(840~845MHz)</item>
        <item>ETSI Standard(865~868MHz)</item>
        <item>Fixed Frequency(922MHz)</item>
    </string-array>
    <string-array name="arrayBase">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="arrayChannelSpc0">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
    <string-array name="arrayChannelSpc1">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string name="fingerprint_btn_import">Import</string>
    <string name="fingerprint_btn_clear">Reset</string>
    <string name="fingerprint_title_pageid">Page ID</string>
    <string name="fingerprint_title_uname">Name</string>
    <string name="fingerprint_title_create">Time</string>
    <string name="fingerprint_title_local_num">Total(local):</string>
    <string name="fingerprint_title_model_num">Total(model):</string>
</resources>