<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/RgInventory"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/RbInventorySingle"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbInventorySingle" />

        <RadioButton
            android:id="@+id/RbInventoryLoop"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/rbInventoryLoop" />

        <RadioButton
            android:id="@+id/RbInventoryAnti"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbInventoryAnti" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/llQValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvQ" />

            <Spinner
                android:id="@+id/SpinnerQ"
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:entries="@array/arrayAntiQ" />
        </LinearLayout>

        <Button
            android:id="@+id/BtInventory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/btInventory" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvCountOfTags" />

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/BtClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/btClear" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="#999999"
            android:text="@string/tvTagUii"
            android:textColor="#990000" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#999999"
            android:text="@string/tvTagLen"
            android:textColor="#990000"
            android:visibility="gone" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#999999"
            android:text="@string/tvTagCount"
            android:textColor="#990000" />
    </LinearLayout>

    <ListView
        android:id="@+id/LvTags"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>