<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/CkWithUii_Read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ckWithUii" />

            <Button
                android:id="@+id/BtUii_Read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/text_size_14"
                android:text="@string/btUii"
                android:visibility="gone" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvTagUii_Read" />

            <EditText
                android:id="@+id/EtTagUii_Read"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvBank" />

            <Spinner
                android:id="@+id/SpinnerBank_Read"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/arrayBank" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvPtr" />

            <EditText
                android:id="@+id/EtPtr_Read"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberSigned"
                android:text="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvLen" />

            <EditText
                android:id="@+id/EtLen_Read"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberSigned"
                android:text="4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvAccessPwd" />

            <EditText
                android:id="@+id/EtAccessPwd_Read"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="00000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvOption_Read" />

            <Spinner
                android:id="@+id/SpinnerOption_Read"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/arrayOption_Read" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvBank2_Read" />

            <Spinner
                android:id="@+id/SpinnerBank2_Read"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/arrayBank" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvPtr2_Read" />

            <EditText
                android:id="@+id/EtPtr2_Read"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvLen2_Read" />

            <EditText
                android:id="@+id/EtLen2_Read"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvData_Read" />

            <EditText
                android:id="@+id/EtData_Read"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint=""
                android:inputType="textMultiLine"
                android:singleLine="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/BtRead"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btRead" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>