<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/CkWithUii_Write"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ckWithUii" />

            <Button
                android:id="@+id/BtUii_Write"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/btUii"
                android:textSize="@dimen/text_size_14"
                android:visibility="gone" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvTagUii_Write" />

            <EditText
                android:id="@+id/EtTagUii_Write"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvBank" />

            <Spinner
                android:id="@+id/SpinnerBank_Write"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/arrayBank" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvPtr" />

            <EditText
                android:id="@+id/EtPtr_Write"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberSigned"
                android:text="0" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvLen" />

            <EditText
                android:id="@+id/EtLen_Write"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:inputType="numberSigned"
                android:text="4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvAccessPwd" />

            <EditText
                android:id="@+id/EtAccessPwd_Write"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="00000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvOption_Write" />

            <Spinner
                android:id="@+id/SpinnerOption_Write"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/arrayOption_Write" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvData_Write" />

            <EditText
                android:id="@+id/EtData_Write"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/BtWrite"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btWrite" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>