<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/layoutbg"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvPageId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fingerprint_title_pageid" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fingerprint_title_uname" />

        <TextView
            android:id="@+id/tvCreateTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fingerprint_title_create" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvData"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="2"
        android:background="#eaeaea"
        android:divider="@drawable/bg_list_selector"
        android:dividerHeight="1px"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:scrollbarStyle="outsideOverlay" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_list_goods_show_list_bg"
        android:orientation="vertical" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvLocalNumTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fingerprint_title_local_num" />

            <TextView
                android:id="@+id/tvLocalNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:id="@+id/tvModelNumTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/fingerprint_title_model_num" />

            <TextView
                android:id="@+id/tvModelNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />
        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnImport"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fingerprint_btn_import" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fingerprint_btn_clear" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>